[gd_scene load_steps=10 format=2]

[ext_resource path="res://imagens/luz/around.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Player/nave_player2.gd" type="Script" id=2]
[ext_resource path="res://imagens/nave/nave_3_final.png" type="Texture" id=3]
[ext_resource path="res://imagens/Objects/Gem.png" type="Texture" id=4]
[ext_resource path="res://Cenas/GUI_Player/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/GUI_Player/ProgressBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/Efeitos/smoke.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/Efeitos/technical_problem.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cenas/Efeitos/comet_tail.tscn" type="PackedScene" id=10]

[node name="player2" type="KinematicBody2D" groups=[
"player1",
]]
scale = Vector2( 0.7, 0.7 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -1.03525 )
texture = ExtResource( 1 )
texture_scale = 2.0
shadow_enabled = true

[node name="smoke_particle" parent="." instance=ExtResource( 7 )]

[node name="comet_tail" parent="." instance=ExtResource( 10 )]
position = Vector2( 1.59254, 35 )
emitting = false

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 3 )
region_rect = Rect2( 314, 456, 101, 77 )

[node name="technical_problem" parent="." instance=ExtResource( 9 )]
position = Vector2( 37.9613, 7.65502 )

[node name="technical_problem2" parent="." instance=ExtResource( 9 )]
position = Vector2( -40.1042, 35.7903 )

[node name="GUI" parent="." instance=ExtResource( 5 )]
margin_left = -58.3382
margin_top = 67.6763
margin_right = 61.6618
margin_bottom = 107.676

[node name="gem_target" type="Sprite" parent="."]
visible = false
position = Vector2( 70.6195, 52.9992 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 112, 106, 91, 77 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BulletPoint" type="Position2D" parent="."]
position = Vector2( 0, -80 )

[node name="Position2D" type="Position2D" parent="BulletPoint"]
position = Vector2( 0, -10 )

[node name="gem_drop" type="Position2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -29.591, 46.3422, -42.767, 34.2202, 0.450333, -43.7817, 44.7217, 33.6932, 32.0728, 46.8692, 0.977371, 31.585 )

[node name="ProgressBar" parent="." instance=ExtResource( 6 )]
light_mask = 2
margin_left = -60.9753
margin_top = 49.4993
margin_right = 62.0247
margin_bottom = 69.4993
